--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
 
+## Gants charts
+*.sty
+
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
